# tinkoff_qa

./: LICENSE  pyproject.toml
